--- a/TeraGateServer/TeraGateServer/TeraGateServer.vcxproj
+++ b/TeraGateServer/TeraGateServer/TeraGateServer.vcxproj
@@ -146,13 +146,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ErrorDisplay.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ErrorDisplay.h" />
     <ClInclude Include="packet.h" />
     <ClInclude Include="protocol.h" />
-    <ClInclude Include="Server.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
