--- a/TeraGateClient/DirectX/DirectX.vcxproj.filters
+++ b/TeraGateClient/DirectX/DirectX.vcxproj.filters
@@ -1,254 +1,264 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="0_Prev">
-      <UniqueIdentifier>{b6b08386-f5bf-4e86-8152-462662fcc314}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="1_GameModule">
-      <UniqueIdentifier>{e961ee2b-03f0-4183-8459-4b18b2d69add}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="1_GameModule\Keyboard">
-      <UniqueIdentifier>{2e5b4d11-df66-49c6-ac8f-45e92cb2e1cd}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="1_GameModule\HLSL">
-      <UniqueIdentifier>{59287b5a-c599-4489-a9d6-4879dc595670}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="2_Entry">
-      <UniqueIdentifier>{6555f2b0-822c-4340-b2c4-38b046ce8667}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="0_Ark">
-      <UniqueIdentifier>{60f62037-527f-49eb-bd34-16b741e48572}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="1_GameModule\RendererModule">
-      <UniqueIdentifier>{d2be0e77-7275-46d3-a98c-9a5636498606}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="1_GameModule\ObjectManager">
-      <UniqueIdentifier>{d37ecee0-4c9e-454c-a8b9-ca09650d924f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="1_GameModule\ObjectManager\Object">
-      <UniqueIdentifier>{d0d0de37-5a36-4fdf-8af8-7545e4e7e8a2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="1_GameModule\SceneManager">
-      <UniqueIdentifier>{334eedd4-d3ac-44ab-abfa-25a85eb452bb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="1_GameModule\SceneManager\Scene">
-      <UniqueIdentifier>{d4ff50a8-acc6-4c11-aa32-c6e58908bf13}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="1_GameModule\RendererModule\Shader">
-      <UniqueIdentifier>{9ae7c42a-9a1c-4148-b921-495f8b1778fd}</UniqueIdentifier>
-    </Filter>
+    <FxCompile Include="Shader\AmbientLightPS.hlsl">
+      <Filter>01_RendererModule\HLSL</Filter>
+    </FxCompile>
+    <FxCompile Include="Shader\AmbientLightVS.hlsl">
+      <Filter>01_RendererModule\HLSL</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Direct.h">
-      <Filter>1_GameModule\RendererModule</Filter>
-    </ClInclude>
-    <ClInclude Include="Camera.h">
-      <Filter>1_GameModule\RendererModule</Filter>
-    </ClInclude>
-    <ClInclude Include="Renderer.h">
-      <Filter>1_GameModule</Filter>
-    </ClInclude>
-    <ClInclude Include="Texture.h">
-      <Filter>1_GameModule\RendererModule</Filter>
-    </ClInclude>
-    <ClInclude Include="Light.h">
-      <Filter>1_GameModule\RendererModule</Filter>
-    </ClInclude>
-    <ClInclude Include="Game.h">
-      <Filter>2_Entry</Filter>
-    </ClInclude>
-    <ClInclude Include="Keyboard.h">
-      <Filter>1_GameModule\Keyboard</Filter>
-    </ClInclude>
-    <ClInclude Include="FBX.h">
-      <Filter>1_GameModule\RendererModule</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjectManager.h">
-      <Filter>1_GameModule\ObjectManager</Filter>
-    </ClInclude>
-    <ClInclude Include="Object.h">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjectPC.h">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjectMinion.h">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjectTile.h">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
-    </ClInclude>
-    <ClInclude Include="Model.h">
-      <Filter>1_GameModule\RendererModule</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjectGate.h">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjectGround.h">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjectStone.h">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneIntro.h">
-      <Filter>1_GameModule\SceneManager\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="Scene.h">
-      <Filter>1_GameModule\SceneManager\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneIngame.h">
-      <Filter>1_GameModule\SceneManager\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneManager.h">
-      <Filter>1_GameModule\SceneManager</Filter>
-    </ClInclude>
-    <ClInclude Include="Prev.h">
-      <Filter>0_Prev</Filter>
-    </ClInclude>
-    <ClInclude Include="TextureShader.h">
-      <Filter>1_GameModule\RendererModule\Shader</Filter>
-    </ClInclude>
-    <ClInclude Include="LightShader.h">
-      <Filter>1_GameModule\RendererModule\Shader</Filter>
-    </ClInclude>
-    <ClInclude Include="ColorShader.h">
-      <Filter>1_GameModule\RendererModule\Shader</Filter>
-    </ClInclude>
-    <ClInclude Include="AmbientLightShader.h">
-      <Filter>1_GameModule\RendererModule\Shader</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>2_Entry</Filter>
-    </ClCompile>
-    <ClCompile Include="Direct.cpp">
-      <Filter>1_GameModule\RendererModule</Filter>
-    </ClCompile>
-    <ClCompile Include="Camera.cpp">
-      <Filter>1_GameModule\RendererModule</Filter>
-    </ClCompile>
-    <ClCompile Include="Renderer.cpp">
-      <Filter>1_GameModule</Filter>
-    </ClCompile>
-    <ClCompile Include="Texture.cpp">
-      <Filter>1_GameModule\RendererModule</Filter>
-    </ClCompile>
-    <ClCompile Include="Light.cpp">
-      <Filter>1_GameModule\RendererModule</Filter>
-    </ClCompile>
-    <ClCompile Include="Game.cpp">
-      <Filter>2_Entry</Filter>
-    </ClCompile>
-    <ClCompile Include="Keyboard.cpp">
-      <Filter>1_GameModule\Keyboard</Filter>
-    </ClCompile>
-    <ClCompile Include="FBX.cpp">
-      <Filter>1_GameModule\RendererModule</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjectManager.cpp">
-      <Filter>1_GameModule\ObjectManager</Filter>
-    </ClCompile>
     <ClCompile Include="Object.cpp">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjectPC.cpp">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjectMinion.cpp">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjectTile.cpp">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
-    </ClCompile>
-    <ClCompile Include="Model.cpp">
-      <Filter>1_GameModule\RendererModule</Filter>
+      <Filter>02_GameModule\Object</Filter>
     </ClCompile>
     <ClCompile Include="ObjectGate.cpp">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
+      <Filter>02_GameModule\Object</Filter>
     </ClCompile>
     <ClCompile Include="ObjectGround.cpp">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
+      <Filter>02_GameModule\Object</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectMinion.cpp">
+      <Filter>02_GameModule\Object</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectPC.cpp">
+      <Filter>02_GameModule\Object</Filter>
     </ClCompile>
     <ClCompile Include="ObjectStone.cpp">
-      <Filter>1_GameModule\ObjectManager\Object</Filter>
+      <Filter>02_GameModule\Object</Filter>
     </ClCompile>
-    <ClCompile Include="Scene.cpp">
-      <Filter>1_GameModule\SceneManager\Scene</Filter>
+    <ClCompile Include="ObjectTile.cpp">
+      <Filter>02_GameModule\Object</Filter>
     </ClCompile>
-    <ClCompile Include="SceneIngame.cpp">
-      <Filter>1_GameModule\SceneManager\Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="SceneIntro.cpp">
-      <Filter>1_GameModule\SceneManager\Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="SceneManager.cpp">
-      <Filter>1_GameModule\SceneManager</Filter>
+    <ClCompile Include="ObjectManager.cpp">
+      <Filter>02_GameModule\ObjectManager</Filter>
     </ClCompile>
     <ClCompile Include="Prev.cpp">
-      <Filter>0_Prev</Filter>
-    </ClCompile>
-    <ClCompile Include="TextureShader.cpp">
-      <Filter>1_GameModule\RendererModule\Shader</Filter>
-    </ClCompile>
-    <ClCompile Include="LightShader.cpp">
-      <Filter>1_GameModule\RendererModule\Shader</Filter>
-    </ClCompile>
-    <ClCompile Include="ColorShader.cpp">
-      <Filter>1_GameModule\RendererModule\Shader</Filter>
+      <Filter>00_Prev</Filter>
     </ClCompile>
     <ClCompile Include="AmbientLightShader.cpp">
-      <Filter>1_GameModule\RendererModule\Shader</Filter>
+      <Filter>01_RendererModule\Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureShader.cpp">
+      <Filter>01_RendererModule\Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="LightShader.cpp">
+      <Filter>01_RendererModule\Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="ColorShader.cpp">
+      <Filter>01_RendererModule\Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>01_RendererModule\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="FBX.cpp">
+      <Filter>01_RendererModule\FBX</Filter>
+    </ClCompile>
+    <ClCompile Include="Model.cpp">
+      <Filter>01_RendererModule\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture.cpp">
+      <Filter>01_RendererModule\Texture</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneIngame.cpp">
+      <Filter>02_GameModule\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneIntro.cpp">
+      <Filter>02_GameModule\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene.cpp">
+      <Filter>02_GameModule\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Direct.cpp">
+      <Filter>01_RendererModule\Direct%28Singleton%29</Filter>
+    </ClCompile>
+    <ClCompile Include="Keyboard.cpp">
+      <Filter>02_GameModule\Keyboard</Filter>
+    </ClCompile>
+    <ClCompile Include="Light.cpp">
+      <Filter>01_RendererModule\Light</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>99_Entry</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>04_Game%28Singleton%29</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneManager.cpp">
+      <Filter>02_GameModule\SceneManager</Filter>
+    </ClCompile>
+    <ClCompile Include="FBXManager.cpp">
+      <Filter>01_RendererModule\FBXManager%28Singleton%29</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="main.html">
-      <Filter>0_Ark</Filter>
-    </None>
-    <None Include="Shader\LightPS.hlsl">
-      <Filter>1_GameModule\HLSL</Filter>
-    </None>
-    <None Include="Shader\LightVS.hlsl">
-      <Filter>1_GameModule\HLSL</Filter>
-    </None>
-    <None Include="Shader\TextureVS.hlsl">
-      <Filter>1_GameModule\HLSL</Filter>
-    </None>
-    <None Include="Shader\TexturePS.hlsl">
-      <Filter>1_GameModule\HLSL</Filter>
+    <ClInclude Include="ObjectTile.h">
+      <Filter>02_GameModule\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>02_GameModule\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectGate.h">
+      <Filter>02_GameModule\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectGround.h">
+      <Filter>02_GameModule\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectMinion.h">
+      <Filter>02_GameModule\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectPC.h">
+      <Filter>02_GameModule\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectStone.h">
+      <Filter>02_GameModule\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectManager.h">
+      <Filter>02_GameModule\ObjectManager</Filter>
+    </ClInclude>
+    <ClInclude Include="Prev.h">
+      <Filter>00_Prev</Filter>
+    </ClInclude>
+    <ClInclude Include="AmbientLightShader.h">
+      <Filter>01_RendererModule\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureShader.h">
+      <Filter>01_RendererModule\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="LightShader.h">
+      <Filter>01_RendererModule\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="ColorShader.h">
+      <Filter>01_RendererModule\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>01_RendererModule\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="FBX.h">
+      <Filter>01_RendererModule\FBX</Filter>
+    </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>01_RendererModule\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>01_RendererModule\Texture</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneIntro.h">
+      <Filter>02_GameModule\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneIngame.h">
+      <Filter>02_GameModule\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>02_GameModule\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Direct.h">
+      <Filter>01_RendererModule\Direct%28Singleton%29</Filter>
+    </ClInclude>
+    <ClInclude Include="Keyboard.h">
+      <Filter>02_GameModule\Keyboard</Filter>
+    </ClInclude>
+    <ClInclude Include="Light.h">
+      <Filter>01_RendererModule\Light</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h">
+      <Filter>04_Game%28Singleton%29</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneManager.h">
+      <Filter>02_GameModule\SceneManager</Filter>
+    </ClInclude>
+    <ClInclude Include="FBXManager.h">
+      <Filter>01_RendererModule\FBXManager%28Singleton%29</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shader\ColorPS.hlsl">
+      <Filter>01_RendererModule\HLSL</Filter>
     </None>
     <None Include="Shader\ColorVS.hlsl">
-      <Filter>1_GameModule\HLSL</Filter>
+      <Filter>01_RendererModule\HLSL</Filter>
     </None>
-    <None Include="Shader\ColorPS.hlsl">
-      <Filter>1_GameModule\HLSL</Filter>
+    <None Include="Shader\LightPS.hlsl">
+      <Filter>01_RendererModule\HLSL</Filter>
+    </None>
+    <None Include="Shader\LightVS.hlsl">
+      <Filter>01_RendererModule\HLSL</Filter>
+    </None>
+    <None Include="Shader\TexturePS.hlsl">
+      <Filter>01_RendererModule\HLSL</Filter>
+    </None>
+    <None Include="Shader\TextureVS.hlsl">
+      <Filter>01_RendererModule\HLSL</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="desc.txt">
-      <Filter>0_Ark</Filter>
+      <Filter>00_Prev</Filter>
     </Text>
     <Text Include="bluePrint.txt">
-      <Filter>0_Ark</Filter>
+      <Filter>00_Prev</Filter>
     </Text>
-    <Text Include="problem.txt">
-      <Filter>0_Ark</Filter>
-    </Text>
-    <Text Include="_플랜.txt">
-      <Filter>0_Ark</Filter>
+    <Text Include="plan.txt">
+      <Filter>00_Prev</Filter>
     </Text>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\현재문제.PNG">
-      <Filter>0_Ark</Filter>
-    </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <FxCompile Include="Shader\AmbientLightPS.hlsl">
-      <Filter>1_GameModule\HLSL</Filter>
-    </FxCompile>
-    <FxCompile Include="Shader\AmbientLightVS.hlsl">
-      <Filter>1_GameModule\HLSL</Filter>
-    </FxCompile>
+    <Filter Include="00_Prev">
+      <UniqueIdentifier>{3e7cf6f0-44d4-44e9-a2af-eb5e63ac2298}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="99_Entry">
+      <UniqueIdentifier>{751c9416-4ee9-4f50-84d3-f4992e0b2896}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01_RendererModule">
+      <UniqueIdentifier>{54f1e755-bd1b-4a24-bc8d-674562003bda}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01_RendererModule\HLSL">
+      <UniqueIdentifier>{05488037-1409-4896-8868-d7f5e7d3a59b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01_RendererModule\Shader">
+      <UniqueIdentifier>{3295bd0e-d55c-4e16-82d5-f67f7b8d01c1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01_RendererModule\Camera">
+      <UniqueIdentifier>{96ab24d5-6bc2-4744-a2a9-8d50d74e9cd3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01_RendererModule\FBX">
+      <UniqueIdentifier>{2beb5b76-808e-4b4f-81bc-0a239307e3e8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01_RendererModule\Model">
+      <UniqueIdentifier>{f41bc407-7a55-4f93-9f3d-0de14e22a11d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01_RendererModule\Texture">
+      <UniqueIdentifier>{9a8c3013-608a-41b9-bdd0-b7d921a599b2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01_RendererModule\Light">
+      <UniqueIdentifier>{fb4d8206-8673-46c9-8355-912991a7ce01}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_GameModule">
+      <UniqueIdentifier>{34e9a967-5251-4a9b-842c-cad7063ead10}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_GameModule\ObjectManager">
+      <UniqueIdentifier>{651fd145-ee4f-40d1-a65b-3a4be7c9e3f9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_GameModule\Object">
+      <UniqueIdentifier>{26df2541-1772-46a2-b5fa-a8ec03554512}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_GameModule\SceneManager">
+      <UniqueIdentifier>{13393655-b479-4981-9e04-b3b03f4cc51d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_GameModule\Scene">
+      <UniqueIdentifier>{33b603cc-50f3-44ba-a677-592defbb301d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_GameModule\Keyboard">
+      <UniqueIdentifier>{a8f31b83-032c-4bcd-8f2c-d9290c20d278}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01_RendererModule\Direct%28Singleton%29">
+      <UniqueIdentifier>{c3dca943-7481-4b32-b13e-e06f28d4839a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01_RendererModule\FBXManager%28Singleton%29">
+      <UniqueIdentifier>{a15f1bb4-fa9b-4ef7-af3e-f7e25dc78e76}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="04_Game%28Singleton%29">
+      <UniqueIdentifier>{303055e5-a93b-4a99-939e-0489524f32b6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
