--- a/TeraGateClient/DirectX/DirectX.vcxproj
+++ b/TeraGateClient/DirectX/DirectX.vcxproj
@@ -30,7 +30,6 @@
     </ClInclude>
     <ClInclude Include="Direct.h" />
     <ClInclude Include="FBX.h" />
-    <ClInclude Include="FBXManager.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="LightShader.h" />
@@ -43,12 +42,14 @@
     <ClInclude Include="ObjectPC.h" />
     <ClInclude Include="ObjectStone.h" />
     <ClInclude Include="ObjectTile.h" />
-    <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Prev.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneIngame.h" />
     <ClInclude Include="SceneIntro.h" />
+    <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="Server.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureShader.h" />
   </ItemGroup>
@@ -64,7 +65,6 @@
     </ClCompile>
     <ClCompile Include="Direct.cpp" />
     <ClCompile Include="FBX.cpp" />
-    <ClCompile Include="FBXManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="LightShader.cpp" />
@@ -78,12 +78,14 @@
     <ClCompile Include="ObjectStone.cpp" />
     <ClCompile Include="ObjectTile.cpp" />
     <ClCompile Include="Prev.cpp" />
-    <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneIngame.cpp" />
     <ClCompile Include="SceneIntro.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="Server.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureShader.cpp" />
   </ItemGroup>
@@ -95,9 +97,11 @@
   <ItemGroup>
     <None Include="Shader\ColorPS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </None>
     <None Include="Shader\ColorVS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </None>
     <None Include="Shader\LightPS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
@@ -115,9 +119,11 @@
   <ItemGroup>
     <FxCompile Include="Shader\AmbientLightPS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
     <FxCompile Include="Shader\AmbientLightVS.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -144,7 +150,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -180,8 +186,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\Program Files\Autodesk\FBX\FBX SDK\2015.1\include\fbxsdk;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
-    <LibraryPath>D:\Program Files\Autodesk\FBX\FBX SDK\2015.1\lib\vs2013\x64\debug;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x64;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64</LibraryPath>
+    <IncludePath>C:\Program Files\Autodesk\FBX\FBX SDK\2015.1\include;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files\Autodesk\FBX\FBX SDK\2015.1\lib\vs2013\x64\debug;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x64;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64</LibraryPath>
     <OutDir>D:\BuildOutput\$(SolutionName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>D:\BuildOutput\$(SolutionName)\$(Platform)\$(Configuration)\Configuration\</IntDir>
   </PropertyGroup>
@@ -194,8 +200,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>D:\Program Files\Autodesk\FBX\FBX SDK\2015.1\include\fbxsdk;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
-    <LibraryPath>D:\Program Files\Autodesk\FBX\FBX SDK\2015.1\lib\vs2013\x64\release;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x64;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64</LibraryPath>
+    <IncludePath>C:\Program Files\Autodesk\FBX\FBX SDK\2015.1\include;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files\Autodesk\FBX\FBX SDK\2015.1\lib\vs2013\x64\release;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x64;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64</LibraryPath>
     <OutDir>D:\BuildOutput\$(SolutionName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>D:\BuildOutput\$(SolutionName)\$(Platform)\$(Configuration)\Configuration\</IntDir>
   </PropertyGroup>
@@ -282,6 +288,9 @@
     <BuildLog>
       <Path>D:\BuildOutput\$(SolutionName)\$(Platform)\$(Configuration)\BuildLog\$(MSBuildProjectName).log</Path>
     </BuildLog>
+    <FxCompile>
+      <ShaderType>Effect</ShaderType>
+    </FxCompile>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
