--- a/TeraGateServer/TeraGateServer/TeraGateServer.vcxproj
+++ b/TeraGateServer/TeraGateServer/TeraGateServer.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="ErrorDisplay.h" />
     <ClInclude Include="packet.h" />
     <ClInclude Include="protocol.h" />
+    <ClInclude Include="timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
