--- a/TeraGateServer/TeraGateServer/TeraGateServer.vcxproj.filters
+++ b/TeraGateServer/TeraGateServer/TeraGateServer.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="ErrorDisplay.h">
       <Filter>ErrorDisplay</Filter>
     </ClInclude>
+    <ClInclude Include="timer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
