--- a/TeraGateServer/TeraGateServer/TeraGateServer.vcxproj.filters
+++ b/TeraGateServer/TeraGateServer/TeraGateServer.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="timer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="enum.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
